@@ -1,0 +1,8 @@
+<H1><blink>Home grown and ugly</blink></h1>
+
+	<i>##CUSTOMER_ADDRESS_LABEL##</i>:
+	##CUSTOMER_ADDRESS_INPUT##
+<hr>
+	You <blink>MUST </blink> <b>supply</b> <i>this:</i>
+	##CUSTOMER_NAME_LABEL## :
+	##CUSTOMER_NAME_INPUT##
